added change of pin
