# docs/swagger.yaml
@@ -14,6 +14,16 @@ definitions:
     - id
     - transaction_pin
     type: object
+  models.CHANGE_PIN:
+    properties:
+      new_pin:
+        type: string
+      old_pin:
+        type: string
+    required:
+    - new_pin
+    - old_pin
+    type: object
   models.DEPOSIT_BODY:
     properties:
       amount:
@@ -426,6 +436,42 @@ paths:
           schema:
             $ref: '#/definitions/models.Error'
       summary: Get user by Id.
+      tags:
+      - User
+  /user/change-pin:
+    post:
+      consumes:
+      - application/json
+      description: Change user pin.
+      parameters:
+      - description: User Pin
+        in: body
+        name: pin
+        required: true
+        schema:
+          $ref: '#/definitions/models.CHANGE_PIN'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: User fetched successfully
+          schema:
+            $ref: '#/definitions/models.HTTP_USER_RESPONSE'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.Error'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/models.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.Error'
+      security:
+      - ApiKeyAuth: []
+      summary: Change user pin.
       tags:
       - User
   /user/edit:
